--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "learn-react-ts",
   "version": "1.0.0",
-  "description": "learn react typescript",
+  "description": "",
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
     "axios": "^0.19.2",
-    "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.12.0",
@@ -25,40 +24,13 @@
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
     "node-sass": "^4.13.1",
-    "stylelint": "^13.2.1",
-    "stylelint-processor-styled-components": "^1.10.0",
-    "stylelint-scss": "^3.16.0",
-    "typescript": "3.7.5"
+    "typescript": "~3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "plugins": [
-      "prettier"
-    ],
-    "extends": [
-      "react-app",
-      "prettier",
-      "prettier/@typescript-eslint",
-      "prettier/react"
-    ],
-    "rules": {
-      "no-caller": "off",
-      "prettier/prettier": [
-        "warn",
-        {
-          "singleQuote": true,
-          "trailingComma": "es5",
-          "semi": false,
-          "tabWidth": 2,
-          "arrowParens": "avoid"
-        }
-      ]
-    }
   },
   "browserslist": [
     ">0.2%",
@@ -117,135 +89,5 @@
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
     ]
-  },
-  "stylelint": {
-    "ignoreFiles": [
-      "**/*.*",
-      "!src/**/*.tsx"
-    ],
-    "plugins": [
-      "stylelint-scss"
-    ],
-    "processors": [
-      "stylelint-processor-styled-components"
-    ],
-    "rules": {
-      "comment-no-empty": true,
-      "declaration-block-no-duplicate-properties": [
-        true,
-        {
-          "ignore": [
-            "consecutive-duplicates-with-different-values"
-          ]
-        }
-      ],
-      "declaration-block-no-shorthand-property-overrides": true,
-      "font-family-no-duplicate-names": true,
-      "font-family-no-missing-generic-family-keyword": true,
-      "function-calc-no-invalid": true,
-      "function-calc-no-unspaced-operator": true,
-      "function-linear-gradient-no-nonstandard-direction": true,
-      "keyframe-declaration-no-important": true,
-      "media-feature-name-no-unknown": true,
-      "no-descending-specificity": true,
-      "no-duplicate-at-import-rules": true,
-      "no-duplicate-selectors": true,
-      "no-empty-source": null,
-      "no-extra-semicolons": true,
-      "no-invalid-double-slash-comments": true,
-      "selector-pseudo-class-no-unknown": true,
-      "selector-type-no-unknown": true,
-      "string-no-newline": true,
-      "unit-no-unknown": true,
-      "at-rule-blacklist": [
-        "debug"
-      ],
-      "at-rule-no-unknown": null,
-      "at-rule-no-vendor-prefix": true,
-      "block-no-empty": true,
-      "block-opening-brace-space-before": "always",
-      "color-hex-case": "lower",
-      "color-hex-length": "short",
-      "color-named": "never",
-      "color-no-invalid-hex": true,
-      "declaration-bang-space-after": "never",
-      "declaration-bang-space-before": "always",
-      "declaration-block-semicolon-newline-after": "always",
-      "declaration-block-semicolon-space-before": "never",
-      "declaration-block-single-line-max-declarations": 1,
-      "declaration-block-trailing-semicolon": "always",
-      "declaration-colon-space-after": "always-single-line",
-      "declaration-colon-space-before": "never",
-      "declaration-property-value-blacklist": {
-        "border": [
-          "none"
-        ],
-        "border-top": [
-          "none"
-        ],
-        "border-right": [
-          "none"
-        ],
-        "border-bottom": [
-          "none"
-        ],
-        "border-left": [
-          "none"
-        ]
-      },
-      "function-comma-space-after": "always-single-line",
-      "function-parentheses-space-inside": "never",
-      "function-url-quotes": "always",
-      "indentation": 2,
-      "length-zero-no-unit": true,
-      "max-nesting-depth": null,
-      "media-feature-name-no-vendor-prefix": true,
-      "media-feature-parentheses-space-inside": "never",
-      "no-missing-end-of-source-newline": true,
-      "number-leading-zero": "always",
-      "number-no-trailing-zeros": true,
-      "property-no-unknown": true,
-      "property-no-vendor-prefix": true,
-      "rule-empty-line-before": [
-        "always-multi-line",
-        {
-          "except": [
-            "first-nested"
-          ],
-          "ignore": [
-            "after-comment"
-          ]
-        }
-      ],
-      "scss/at-extend-no-missing-placeholder": true,
-      "scss/at-function-pattern": "^[a-z]+([a-z0-9-]+[a-z0-9]+)?$",
-      "scss/at-import-no-partial-leading-underscore": true,
-      "scss/at-import-partial-extension-blacklist": [
-        "scss"
-      ],
-      "scss/at-mixin-pattern": "^[a-z]+([a-z0-9-]+[a-z0-9]+)?$",
-      "scss/at-rule-no-unknown": true,
-      "scss/dollar-variable-colon-space-after": "always",
-      "scss/dollar-variable-colon-space-before": "never",
-      "scss/dollar-variable-pattern": "^[_]?[a-z]+([a-z0-9-]+[a-z0-9]+)?$",
-      "scss/percent-placeholder-pattern": "^[a-z]+([a-z0-9-]+[a-z0-9]+)?$",
-      "scss/selector-no-redundant-nesting-selector": true,
-      "selector-class-pattern": [
-        "^[a-z0-9\\-]+$",
-        {
-          "message": "Selector should be written in lowercase with hyphens (selector-class-pattern)"
-        }
-      ],
-      "selector-list-comma-newline-after": "always",
-      "selector-max-compound-selectors": 3,
-      "selector-max-id": 0,
-      "selector-no-qualifying-type": true,
-      "selector-no-vendor-prefix": true,
-      "selector-pseudo-element-colon-notation": "single",
-      "selector-pseudo-element-no-unknown": true,
-      "shorthand-property-no-redundant-values": true,
-      "string-quotes": "single",
-      "value-no-vendor-prefix": true
-    }
   }
 }
